Validation before Implementing Menu

--- a/TpBanque/TpBanque.csproj
+++ b/TpBanque/TpBanque.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Client.cs" />
     <Compile Include="Compte.cs" />
+    <Compile Include="CompteEpargne.cs" />
     <Compile Include="MAD.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
