Validation before Implementing Menu

--- a/TpBanque/TpBanque.csproj
+++ b/TpBanque/TpBanque.csproj
@@ -43,10 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AppBanque.cs" />
     <Compile Include="Client.cs" />
     <Compile Include="Compte.cs" />
+    <Compile Include="CompteCourant.cs" />
     <Compile Include="CompteEpargne.cs" />
     <Compile Include="MAD.cs" />
+    <Compile Include="Operation.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
